[package]
name = "revm-ee-tests"
description = "Common test utilities for REVM crates"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
revm = { workspace = true, features = ["serde", "std"] }
similar-asserts = { workspace = true, features = ["serde"] }

[features]
default = []
optional_balance_check = [
    "revm/optional_balance_check",
]
