[package]
name = "revm-handler"
description = "Revm handler crates"
version = "1.0.0-alpha.2"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
# revm
database-interface.workspace = true
interpreter.workspace = true
precompile.workspace = true
context-interface.workspace = true
context.workspace = true
primitives.workspace = true
state.workspace = true
specification.workspace = true
bytecode.workspace = true
auto_impl.workspace = true

# Optional
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "rc",
], optional = true }

[dev-dependencies]
database.workspace = true
alloy-eip7702.workspace = true
alloy-provider.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true

[features]
default = ["std"]
std = ["serde?/std"]
serde = [
    "dep:serde",
    "primitives/serde",
    "specification/serde",
    "state/serde",
    "context-interface/serde",
]
serde-json = ["serde"]
