[package]
authors.workspace = true
description = "Revm handler crates"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "revm-handler"
readme.workspace = true
repository.workspace = true
version = "6.0.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "deny"
unreachable_pub = "warn"
unused_must_use = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
# revm
async-trait.workspace = true
auto_impl.workspace = true
bytecode.workspace = true
context.workspace = true
context-interface.workspace = true
database-interface.workspace = true
interpreter.workspace = true
precompile.workspace = true
primitives.workspace = true
state.workspace = true

# Optional
serde = { version = "1.0", default-features = false, features = [
	"derive",
	"rc",
], optional = true }

[dev-dependencies]
alloy-eip7702.workspace = true
alloy-provider.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
database.workspace = true
tokio.workspace = true

[features]
default = ["std"]
serde = [
	"alloy-eip7702/serde",
	"bytecode/serde",
	"context-interface/serde",
	"context/serde",
	"database-interface/serde",
	"database/serde",
	"dep:serde",
	"interpreter/serde",
	"primitives/serde",
	"state/serde",
]
serde-json = ["serde"]
std = [
	"alloy-eip7702/std",
	"bytecode/std",
	"context-interface/std",
	"context/std",
	"database-interface/std",
	"database/std",
	"interpreter/std",
	"precompile/std",
	"primitives/std",
	"serde?/std",
	"state/std",
]
