[package]
name = "revm-inspector"
description = "Revm inspector interface"
version = "4.1.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
# revm
context.workspace = true
database-interface.workspace = true
handler.workspace = true
primitives.workspace = true
state.workspace = true
interpreter.workspace = true

auto_impl.workspace = true

# Optional
serde = { workspace = true, features = ["derive", "rc"], optional = true }
serde_json = { workspace = true, features = ["alloc"], optional = true }

[dev-dependencies]
database = { workspace = true, features = ["serde"] }

[features]
default = ["std"]
# Preserve order of json field
std = [
	"serde?/std",
	"serde_json?/std",
	"serde_json?/preserve_order",
	"context/std",
	"database/std",
	"database-interface/std",
	"handler/std",
	"interpreter/std",
	"primitives/std",
	"state/std",
]
serde = [
	"dep:serde",
	"database/serde",
	"context/serde",
	"database-interface/serde",
	"handler/serde",
	"interpreter/serde",
	"primitives/serde",
	"state/serde",
]
serde-json = ["serde", "dep:serde_json"]
