[package]
authors.workspace = true
description = "Revm inspector interface"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "revm-inspector"
readme.workspace = true
repository.workspace = true
version = "6.0.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "deny"
unreachable_pub = "warn"
unused_must_use = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
# revm
context.workspace = true
database-interface.workspace = true
handler.workspace = true
interpreter.workspace = true
primitives.workspace = true
state.workspace = true

async-trait.workspace = true
auto_impl.workspace = true
either.workspace = true

# Optional
serde = { workspace = true, features = ["derive", "rc"], optional = true }
serde_json = { workspace = true, features = [
	"alloc",
	"preserve_order",
], optional = true }

[dev-dependencies]
database = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["std"]
# Preserve order of json field
serde = [
	"context/serde",
	"database-interface/serde",
	"database/serde",
	"either/serde",
	"handler/serde",
	"interpreter/serde",
	"primitives/serde",
	"state/serde",
]
std = [
	"context/std",
	"database-interface/std",
	"database/std",
	"either/std",
	"handler/std",
	"interpreter/std",
	"primitives/std",
	"serde?/std",
	"serde_json?/preserve_order",
	"serde_json?/std",
	"state/std",
]

# deprecated please use [`tracer`] feature instead
serde-json = ["dep:serde", "dep:serde_json", "serde"]
tracer = ["serde-json"]
