[package]
name = "revm-interpreter"
description = "Revm Interpreter that executes bytecode."
version = "27.0.2"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# revm
bytecode.workspace = true
primitives.workspace = true
context-interface.workspace = true
state.workspace = true

# optional
serde = { workspace = true, features = ["derive", "rc"], optional = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["alloc"] }

[features]
default = ["std"]
std = [
	"serde?/std",
	"primitives/std",
	"context-interface/std",
	"bytecode/std",
	"state/std",
	"serde_json/std",
]
hashbrown = ["primitives/hashbrown"]
serde = [
	"dep:serde",
	"primitives/serde",
	"bytecode/serde",
	"context-interface/serde",
	"state/serde",
]
arbitrary = ["std", "primitives/arbitrary"]
# TODO : Should be set from Context or from crate that consumes this PR.
memory_limit = []
