[package]
name = "monad-revm"
description = "Monad variant of Revm"
version = "0.1.0"
authors = ["Category Labs"]
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# revm
revm.workspace = true
auto_impl.workspace = true

[dev-dependencies]
rstest = "0.24"

[features]
default = ["std", "c-kzg", "secp256k1", "portable", "blst"]
std = ["revm/std"]
serde = ["revm/serde"]
portable = ["revm/portable"]
c-kzg = ["revm/c-kzg"]
secp256k1 = ["revm/secp256k1"]
blst = ["revm/blst"]

# Dev features for testing
dev = [
    "memory_limit",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_no_base_fee",
]
memory_limit = ["revm/memory_limit"]
optional_balance_check = ["revm/optional_balance_check"]
optional_block_gas_limit = ["revm/optional_block_gas_limit"]
optional_no_base_fee = ["revm/optional_no_base_fee"]