[package]
name = "op-revm"
description = "Optimism variant of Revm"
version = "4.0.3"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
# revm
revm = { workspace = true, features = ["secp256r1"] }
auto_impl.workspace = true

# static precompile sets.
once_cell = { workspace = true, features = ["alloc"] }

# Optional
serde = { workspace = true, features = ["derive", "rc"], optional = true }

[dev-dependencies]
anyhow.workspace = true
rstest.workspace = true
alloy-sol-types.workspace = true
sha2.workspace = true
serde_json = { workspace = true, features = ["alloc"] }
alloy-primitives.workspace = true

[features]
default = ["std", "c-kzg", "secp256k1", "portable", "blst"]
std = [
	"serde?/std",
	"revm/std",
	"alloy-sol-types/std",
	"once_cell/std",
	"sha2/std",
	"serde_json/std",
	"alloy-primitives/std"
]
hashbrown = ["revm/hashbrown"]
serde = [
	"dep:serde",
	"revm/serde",
	"alloy-primitives/serde"
]
portable = ["revm/portable"]

dev = [
	"memory_limit",
	"optional_balance_check",
	"optional_block_gas_limit",
	"optional_eip3607",
	"optional_no_base_fee",
]
memory_limit = ["revm/memory_limit"]
optional_balance_check = ["revm/optional_balance_check"]
optional_block_gas_limit = ["revm/optional_block_gas_limit"]
optional_eip3607 = ["revm/optional_eip3607"]
optional_no_base_fee = ["revm/optional_no_base_fee"]

# See comments in `revm-precompile`
secp256k1 = ["revm/secp256k1"]
c-kzg = ["revm/c-kzg"]
# `kzg-rs` is not audited but useful for `no_std` environment, use it with causing and default to `c-kzg` if possible.
kzg-rs = ["revm/kzg-rs"]
blst = ["revm/blst"]
bn = ["revm/bn"]
