[package]
name = "revm-precompile"
description = "Revm Precompiles - Ethereum compatible precompiled contracts"
version = "36.0.3"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# revm
primitives.workspace = true
context-interface.workspace = true

# modexp precompiles
aurora-engine-modexp.workspace = true
# gmp ffi
gmp-mpfr-sys = { workspace = true, default-features = false, optional = true }

# ecRecover
k256 = { workspace = true, features = ["ecdsa"] }
secp256k1 = { workspace = true, features = [
	"alloc",
	"recovery",
	"rand",
	"global-context",
], optional = true }

# SHA2-256 and RIPEMD-160
sha2.workspace = true
ripemd.workspace = true

# Optionally use substrate implementation for eip1962
bn = { workspace = true, optional = true }

# Use arkworks implementation for eip1962
ark-bn254 = { workspace = true, features = ["curve"] }
ark-ec = { workspace = true }
ark-ff = { workspace = true, features = ["asm"] }
ark-serialize = { workspace = true }

# KZG point evaluation precompile
c-kzg = { workspace = true, optional = true, features = [
	"ethereum_kzg_settings",
] }


# Use the BLS12-381 implementation of blst for EIP2537
blst = { workspace = true, optional = true }

# Use the BLS12-381 implementation of arkworks for EIP2537
ark-bls12-381 = { workspace = true, features = ["curve"] }

# p256verify precompile
p256 = { workspace = true, features = ["ecdsa"] }
aws-lc-rs = { workspace = true, optional = true }

# utils
cfg-if.workspace = true
arrayref = "0.3.6"

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["std"] }
ark-std = { workspace = true }
rstest.workspace = true
p256 = { workspace = true, features = ["ecdsa"] }

[features]
default = ["std", "secp256k1", "blst", "c-kzg", "portable"]

std = [
	"primitives/std",
	"context-interface/std",
	"k256/std",
	"ripemd/std",
	"sha2/std",
	"c-kzg?/std",
	"secp256k1?/std",
	"ark-bn254/std",
	"ark-bls12-381/std",
	"aurora-engine-modexp/std",
	"ark-ec/std",
	"ark-ff/std",
	"ark-serialize/std",
	"ark-std/std",
	"p256/std",
]
hashbrown = ["primitives/hashbrown"]
asm-keccak = ["primitives/asm-keccak"]
asm-sha2 = ["sha2/asm"]


# Use c-kzg for the KZG point evaluation precompile. This is the default,
# battle-tested Ethereum implementation and has had portability/performance work
# upstream, but it is a C-backed dependency; without it, revm falls back to the
# Rust BLS12-381 backends when available.
c-kzg = ["dep:c-kzg"]

# Compile c-kzg/blst without ISA-specific extensions. Prefer this for binaries
# that must run across different CPUs; disabling it can be faster on tuned
# targets but produces less portable artifacts.
portable = ["c-kzg?/portable", "blst?/portable"]

# Use rust-secp256k1 for ecrecover. It is faster and uses a global verification
# context, so it is the default backend; the pure-Rust k256 path is more portable,
# especially for wasm builds on Windows/macOS, but slower.
secp256k1 = ["dep:secp256k1"]

# Use blst for BLS12-381 and, when c-kzg is off, KZG point evaluation. This is
# the default fast backend and matches c-kzg's underlying implementation style,
# but it brings an FFI dependency and needs portable mode for broad CPU support;
# without it, revm uses the pure-Rust arkworks backend.
blst = ["dep:blst"]

# Use substrate-bn for the BN254/EIP-196 precompiles. This preserves the
# historical/default backend; without it, revm uses the arkworks BN254 backend,
# which is pure Rust and shared with the BLS stack.
bn = ["dep:bn"]

# Use GMP for the modexp precompile. This is much faster on long-tail mainnet
# workloads such as Aztec/ZKSync transactions, but requires dynamically linking
# libgmp at runtime; without it, revm uses the portable Rust implementation.
gmp = ["dep:gmp-mpfr-sys"]

# Use aws-lc-rs for secp256r1 signature verification. It is faster than the
# pure-Rust p256 backend, but adds the AWS-LC native dependency; without it, revm
# keeps the more portable p256 implementation.
p256-aws-lc-rs = ["dep:aws-lc-rs"]

[[bench]]
name = "bench"
path = "bench/main.rs"
harness = false
required-features = ["secp256k1"]
