[package]
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "REVM Precompiles - Ethereum compatible precompiled contracts"
edition = "2021"
keywords = ["no_std", "ethereum", "evm", "revm", "precompiles"]
license = "MIT"
name = "revm-precompiles"
repository = "https://github.com/bluealloy/revm"
version = "2.0.0"

[dependencies]
revm-primitives = { path = "../primitives", default-features = false }
bn = { package = "substrate-bn", version = "0.6", default-features = false }
k256 = { version = "0.11", default-features = false, features = ["ecdsa", "keccak256"] }
num = { version = "0.4.0", default-features = false, features = ["alloc"] }
once_cell = "1.17"
ripemd = { version = "0.1", default-features = false }
secp256k1 = { version = "0.26.0", default-features = false, features = ["alloc", "recovery"], optional = true }
sha2 = { version = "0.10.5", default-features = false }
sha3 = { version = "0.10.4", default-features = false }

[dev-dependencies]
hex = "0.4"

[features]
default = ["secp256k1"]
# secp256k1 is used as faster alternative to k256 lib. And in most cases should be default.
# Only problem that it has, it fails to build for wasm target on windows and mac as it is c lib.
# If you dont require wasm on win/mac, i would recommend its usage.
secp256k1 = ["dep:secp256k1"]

