[package]
name = "revm-primitives"
description = "Revm primitives types"
version = "17.0.1"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
# alloy
alloy-primitives = { workspace = true, features = ["rlp", "map"] }

# mics
enumn.workspace = true

# Optional
serde = { workspace = true, features = ["derive", "rc"], optional = true }


[features]
default = ["std"]
std = [
	"alloy-primitives/std",
	"serde?/std"
]
serde = ["dep:serde", "alloy-primitives/serde"]

hashbrown = ["alloy-primitives/map-hashbrown"]
arbitrary = ["std", "alloy-primitives/arbitrary"]
asm-keccak = ["alloy-primitives/asm-keccak"]
rand = ["alloy-primitives/rand"]
