[package]
name = "revm"
description = "Revm - Rust Ethereum Virtual Machine"
version = "27.1.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# revm
bytecode.workspace = true
context.workspace = true
context-interface.workspace = true
database.workspace = true
database-interface.workspace = true
handler.workspace = true
inspector.workspace = true
interpreter.workspace = true
precompile.workspace = true
primitives.workspace = true
state.workspace = true

[dev-dependencies]
serde_json = { workspace = true, features = ["alloc", "preserve_order"] }
serde = { workspace = true, features = ["derive"] }

[features]
default = ["std", "c-kzg", "secp256k1", "portable", "blst", "tracer"]
std = [
	"interpreter/std",
	"precompile/std",
	"handler/std",
	"context/std",
	"context-interface/std",
	"bytecode/std",
	"database/std",
	"database-interface/std",
	"inspector/std",
	"primitives/std",
	"state/std",
	"serde/std",
	"serde_json/std",
]
hashbrown = ["interpreter/hashbrown", "precompile/hashbrown"]
map-foldhash = ["primitives/map-foldhash"]
serde = [
	"interpreter/serde",
	"database-interface/serde",
	"primitives/serde",
	"handler/serde",
	"context-interface/serde",
	"bytecode/serde",
	"context/serde",
	"database/serde",
	"inspector/serde",
	"state/serde",
]
arbitrary = ["primitives/arbitrary"]
asm-keccak = ["primitives/asm-keccak"]
sha3-keccak = ["primitives/sha3-keccak"]
asyncdb = ["database-interface/asyncdb"]

# Enables alloydb inside database crate
alloydb = ["database/alloydb"]

# Enables serde-json inside inspector crate
serde-json = ["serde", "inspector/tracer"]
tracer = ["inspector/tracer"]

dev = [
	"memory_limit",
	"optional_balance_check",
	"optional_block_gas_limit",
	"optional_eip3541",
	"optional_eip3607",
	"optional_no_base_fee",
]
memory_limit = ["context/memory_limit", "interpreter/memory_limit"]
optional_balance_check = ["context/optional_balance_check"]
optional_block_gas_limit = ["context/optional_block_gas_limit"]
optional_eip3541 = ["context/optional_eip3541"]
optional_eip3607 = ["context/optional_eip3607"]
optional_no_base_fee = ["context/optional_no_base_fee"]

# Precompiles features

secp256k1 = ["precompile/secp256k1"] # See comments in `precompile`
c-kzg = [
	"precompile/c-kzg",
] # `kzg-rs` is not audited but useful for `no_std` environment, use it with causing and default to `c-kzg` if possible.
kzg-rs = ["precompile/kzg-rs"]
blst = ["precompile/blst"]
bn = ["precompile/bn"]
asm-sha2 = ["precompile/asm-sha2"]

# Compile in portable mode, without ISA extensions.
# Binary can be executed on all systems.
portable = ["precompile/portable"]

# use gmp for modexp precompile.
# It is faster library but licences as GPL code, if enabled please make sure to follow the license.
gmp = ["precompile/gmp"]
